# ChangeLog for dev-ruby/rubyforge
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.38 2009/01/29 21:02:41 flameeyes Exp $

  29 Jan 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  rubyforge-1.0.1.ebuild, rubyforge-1.0.2.ebuild:
  Fix HOMEPAGE for 1.0.x releases.

*rubyforge-1.0.2 (24 Jan 2009)

  24 Jan 2009; Hans de Graaff <graaff@gentoo.org> +rubyforge-1.0.2.ebuild:
  Version bump

  26 Dec 2008; Raúl Porcel <armin76@gentoo.org> rubyforge-1.0.1.ebuild:
  ia64 stable wrt #250348

  20 Dec 2008; Markus Meier <maekke@gentoo.org> rubyforge-1.0.1.ebuild:
  amd64/x86 stable, bug #250348

  14 Dec 2008; nixnut <nixnut@gentoo.org> rubyforge-1.0.1.ebuild:
  Stable on ppc wrt bug 250348

  12 Dec 2008; Hans de Graaff <graaff@gentoo.org> -rubyforge-0.4.3.ebuild,
  -rubyforge-0.4.4.ebuild, -rubyforge-1.0.0.ebuild:
  Remove old versions

  10 Dec 2008; Ferris McCormick <fmccor@gentoo.org> rubyforge-1.0.1.ebuild:
  Sparc stable, part of Bug #250348.

  09 Dec 2008; Brent Baude <ranger@gentoo.org> rubyforge-1.0.1.ebuild:
  Marking rubyforge-1.0.1 ppc64 for bug 250348

  25 Nov 2008; Hans de Graaff <graaff@gentoo.org> rubyforge-1.0.1.ebuild:
  rubyforge works fine with Ruby 1.9

*rubyforge-1.0.1 (25 Oct 2008)

  25 Oct 2008; Hans de Graaff <graaff@gentoo.org> +rubyforge-1.0.1.ebuild:
  Version bump. Fixes broken upload of release notes to rubyforge.

  08 Jul 2008; Javier Villavicencio <the_paya@gentoo.org>
  rubyforge-1.0.0.ebuild:
  Add ~x86-fbsd.

  07 Jul 2008; Friedrich Oslage <bluebird@gentoo.org>
  rubyforge-1.0.0.ebuild:
  Add ~sparc keyword, bug #230517

*rubyforge-1.0.0 (22 May 2008)

  22 May 2008; Hans de Graaff <graaff@gentoo.org> +rubyforge-1.0.0.ebuild:
  Version bump: 
  
   * Removed HTTPAccess2, thanks to Aaron Patterson. Even tho he's whiny.
   * Changed initialize/configure to make testing scream. 100x faster.
