@@ -1,8 +1,10 @@
 DIST rubyforge-0.4.5.gem 29696 RMD160 f58e9869e532e71152621f88aae17b46cd5c2ee4 SHA1 adec775c25d042966c08fa004cc7ff0778fc3c3b SHA256 46608d6aeaff698e66642d4e8f56518f6d52a63ad11eca7949b9d92105627a5d
 DIST rubyforge-1.0.1.gem 16384 RMD160 2f2f9147aa5571bce73f9eb80104821a169e2ad3 SHA1 e7cfa2b6170dfed87464bf5e4ac3b59a65041d85 SHA256 5778fb7bff9ec48e8c9e3c60c98b29e27861dfca29a6d56c83ddb2d06a3b7b96
 DIST rubyforge-1.0.2.gem 17408 RMD160 1335f1d536293c853758c70ed7402b21aa93da67 SHA1 231e82ff5abcdff4fd3eb9c104563df16bcf1666 SHA256 32a2b1e67d89f8cbf215aae013e668bcde4b0585bd748f93ad9cdda394eb324b
+DIST rubyforge-1.0.3.gem 17408 RMD160 2a94707c18c639b9393e2d8c1c84d4d0122bda22 SHA1 fcbd6dd7e111d66e1fb36544a95bfc7ff9c9f594 SHA256 dfcf9cf95eac205b472d92a3937cc841a362acd36c04b8bc2f99559b2b5a905f
 EBUILD rubyforge-0.4.5.ebuild 498 RMD160 988a9c9d83ff843d958abb5b0b5a82d5aac77fd6 SHA1 2cee3b6fa088f260e40d94a45f262ad77ea1b8da SHA256 23d604b3c677cad0f28963c62890c21a019c022006d30cf6665be010850bc751
 EBUILD rubyforge-1.0.1.ebuild 527 RMD160 6861beccb35f2c967db52b90fa3332dc1cba4f4c SHA1 520e06e5df196d3498fbe63b2e4ee4bbd3331d3a SHA256 5e5af115ffcd03fa5a8c3a06683575788201a0c52585e34b763656810870d41d
 EBUILD rubyforge-1.0.2.ebuild 527 RMD160 ce8cbe2aecefe80e1c44d2bb73331476f60bb88a SHA1 3b1999aa7499c0e2300f38af7db4ef15b0d95097 SHA256 f44fdb6ff2c58ba7935ba5bc96a34dd3b5750de6faed637daf37f4fb1f973973
-MISC ChangeLog 5114 RMD160 8065ac9ca4d8577b6b8fb0650885c657c4e219a7 SHA1 dcb031f829006ce6c089d81151bfe690226cba23 SHA256 fd84a184efe4b8bfc441dfe63fd29bc83d781560bc934421e0e9e9ac52ae6f56
+EBUILD rubyforge-1.0.3.ebuild 524 RMD160 4eca48723627b43392da025a6edb892eb324ed46 SHA1 03ef1d4c0fb4e24f33cdc06669df91270cd863e7 SHA256 52564c5a1dfb077dca0c9b85e067dbb77e0851972ffc7a6122b2123d93242ade
+MISC ChangeLog 5256 RMD160 6a95a6bb481271881da6ab5e510736e0eaf245c6 SHA1 f2acf2448a29b5847e39b7eab0ab74ab9620e0c0 SHA256 8877931555a3498919683af50f3e2d4b55143d95bed0a179e9d593612da96892
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
