@@ -1,0 +1,17 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/rubyforge-1.0.3.ebuild,v 1.1 2009/03/05 10:38:44 graaff Exp $
+
+EAPI="prefix"
+
+inherit gems
+
+DESCRIPTION="Simplistic script which automates a limited set of rubyforge operations"
+HOMEPAGE="http://codeforpeople.rubyforge.org/rubyforge/"
+
+USE_RUBY="ruby18 ruby19"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos ~x86-macos ~x86-solaris"
+IUSE=""
