@@ -1,6 +1,11 @@
 # ChangeLog for dev-ruby/rubyforge
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.38 2009/01/29 21:02:41 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rubyforge/ChangeLog,v 1.39 2009/03/05 10:38:44 graaff Exp $
+
+*rubyforge-1.0.3 (05 Mar 2009)
+
+  05 Mar 2009; Hans de Graaff <graaff@gentoo.org> +rubyforge-1.0.3.ebuild:
+  Version bump with minor bug fixes.
 
   29 Jan 2009; Diego E. Pettenò <flameeyes@gentoo.org>
   rubyforge-1.0.1.ebuild, rubyforge-1.0.2.ebuild:
